--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
-    "ejs": "^3.1.6",
+    "ejs": "^3.0.2",
     "express": "^4.17.3",
     "hbs": "^4.2.0",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.7.3"
+    "nodemailer": "^6.7.3",
+    "nodemon": "^2.0.15",
+    "path": "^0.12.7",
+    "router": "^1.3.6"
   }
 }
