--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.0.2",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "hbs": "^4.2.0",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
-    "router": "^1.3.6"
+    "router": "^1.3.6",
+    "uuid": "^8.3.2"
   }
 }
