--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
     "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
     "path": "^0.12.7",
+    "reflect-metadata": "^0.1.13",
     "router": "^1.3.6",
+    "typeorm": "^0.3.6",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.24"
   }
 }
