--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ host=localhost
 user=root
 password=''
 database=luqmatAish
+email='unstoppableteam826@gmail.com'
+emailPassword='123123unstoppableteam826'
+   
