--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "hbs": "^4.2.0",
+    "method-override": "^3.0.0",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
