--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-host=localhost
-user=root
-password=''
-database=luqmatAish
-
+host='localhost'
+user='root'
+password= 
+database = luqmatAish
+email='unstoppableteam826@gmail.com'
+emailPassword='123123unstoppableteam826'
