--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 host='localhost'
 user='root'
-password=
+password= 'password'
 database = luqmatAish
 email='unstoppableteam826@gmail.com'
 emailPassword='123123unstoppableteam826'
     
+
