--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.7",
     "express": "^4.17.3",
+    "express-flash": "^0.0.2",
     "express-session": "^1.17.2",
     "hbs": "^4.2.0",
     "method-override": "^3.0.0",
