--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.7",
-    "express": "^4.17.3",
+    "express": "^4.18.1",
     "express-session": "^1.17.2",
     "hbs": "^4.2.0",
     "method-override": "^3.0.0",
