--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.20.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
+    "cryptr": "^6.0.3",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
