--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemailer": "^6.7.3",
     "path": "^0.12.7",
     "router": "^1.3.6",
+    "toastify-js": "^1.11.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
